--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1 class="clockJs"> 00:00 </h1>
     </div>
     <form class="msgJs">
-        <input type:"text" placeholder="what is your name?" />
+        <input type= "text" placeholder="what is your name?" />
     </form>
     <script src="clock.js"></script>
 </body>
